# product-review-analysis

./: .gitignore  CLAUDE.md  LICENSE  README.md  _quarto.yml  pyproject.toml  report.qmd
docs/: index.html
notebooks/: explore.ipynb
scripts/: inspect_queries.py  load_data.py  load_metadata.py  queries.py
sql/: data_profiling.sql  most_helpful_reviews.sql  product_summary.sql  product_trajectory.sql  rating_vs_reviewer_avg.sql  reviewer_summary.sql  schema.sql  top_reviewers.sql
