[project]
name = "product-review-analysis"
version = "0.1.0"
description = "SQL-focused analysis of Amazon product reviews."
requires-python = ">=3.14"
dependencies = [
    "altair>=6.2.2",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
]

# A build backend makes the project itself installable, so uv sync installs it
# into .venv in editable mode. That puts `scripts` on the import path for any
# process using the venv (Jupyter, Quarto render, plain python) with no
# sys.path manipulation in notebooks.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.uv]
# Build .venv from a uv-managed CPython, never Fedora's /usr/bin/python3.
# Keeps the project independent of dnf upgrades, and of stdlib modules
# (e.g. tkinter) that Fedora splits into separate system packages.
python-preference = "only-managed"

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.1",
]
